
plugins {
    id 'java'
    id 'application'
}

sourceCompatibility = JavaVersion.VERSION_1_9
targetCompatibility = JavaVersion.VERSION_1_9

repositories {
    jcenter()
}

dependencies {
}

compileJava.options.compilerArgs += ['--add-modules', 'java.xml.bind']
run.jvmArgs += ['--add-modules', 'java.xml.bind', '--illegal-access=debug', '--add-opens', 'java.base/java.lang=ALL-UNNAMED']

mainClassName = 'simple.migration.App'
